# messenger-zome

./: 404.html  Cargo.toml  README.md  design.html  eslint.config.js  flake.nix  hashmap.json  index.html  introduction.html  messenger-store.html  package.json  pnpm-lock.yaml  setup.html  tsconfig.json
assets/: app.B6syPVqw.js  app.BhLzcp1B.js  app.BjPlQoqN.js  app.Bn7tz23l.js  app.BrIKJ3po.js  app.Bu2fn1n8.js  app.BwLbI3M2.js  app.Crh3IWiA.js  app.DNdtdPOh.js  app.DRplPyOU.js  app.DS59wth0.js  app.DYRcW0EG.js  app.D_h3v_xA.js  app.Dv0jBhZw.js  app.XQdoWmC0.js  app._JJo-8Lo.js  app.vz4J0-7I.js  design.md.CVG0ME_X.lean.js  design.md.iFjWiVST.js  design.md.iFjWiVST.lean.js  elements_all-chats.md.1Y9K7n8g.js  elements_all-chats.md.1Y9K7n8g.lean.js  elements_all-chats.md.51obd9gl.js  elements_all-chats.md.51obd9gl.lean.js  elements_all-chats.md.B09LFZh3.js  elements_all-chats.md.B09LFZh3.lean.js  elements_all-chats.md.Bdw_VtmE.js  elements_all-chats.md.Bdw_VtmE.lean.js  elements_all-chats.md.Bh0EbQx-.js  elements_all-chats.md.Bh0EbQx-.lean.js  elements_all-chats.md.CEUihTSm.js  elements_all-chats.md.CEUihTSm.lean.js  elements_all-chats.md.CHfkRG-v.js  elements_all-chats.md.CHfkRG-v.lean.js  elements_all-chats.md.Ck6yro4s.lean.js  elements_all-chats.md.Cm_90Ic_.js  elements_all-chats.md.Cm_90Ic_.lean.js  elements_all-chats.md.D0i9OZSX.js  elements_all-chats.md.DmjjB_3t.js  elements_all-chats.md.DmjjB_3t.lean.js  (+216 more)
backend/: .rustc_info.json
docs/: design.md  index.md  introduction.md  messenger-store.md  package.json  setup.md
elements/: all-chats.html  create-group-chat.html  custom-elements.json  group-chat.html  peer-chat.html
tests/: package.json  (+2 more)
zomes/coordinator/messenger/: Cargo.toml  zome.nix
zomes/coordinator/messenger/src/: agent_encrypted_message.rs  awaiting_deps.rs  create_peer.rs  group_chat.rs  lib.rs  linked_devices.rs  notifications.rs  peer_chat.rs  peer_messages.rs  private_messenger_entries.rs  profile.rs  signed.rs  synchronize.rs  typing_indicator.rs  utils.rs
zomes/integrity/messenger/: Cargo.toml  zome.nix
zomes/integrity/messenger/src/: agent_encrypted_message.rs  group_chat.rs  history.rs  lib.rs  messenger_profile.rs  peer_chat.rs  peer_message.rs  private_messenger_entry.rs  profile.rs  signed.rs
(+1257 files in other folders)
