[package]
name = "messenger"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "messenger"

[dependencies]
hdk = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

messenger_integrity = { path = "../../integrity/messenger", package = "messenger_integrity" }
linked_devices_types = { git = "https://github.com/darksoil-studio/linked-devices-zome", branch = "main-0.5" }
private_event_sourcing = { git = "https://github.com/darksoil-studio/private-event-sourcing-zome", branch = "main-0.5" }
