[package]
name = "messenger_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "messenger_integrity"

[dependencies]

serde = { workspace = true }
hdi = { workspace = true }

linked_devices_types = { git = "https://github.com/darksoil-studio/linked-devices-zome", branch = "main-0.3" }
